--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class = 'slide first'>
         <div class = 'content'>
 
-            <img id = 'app' src = 'Assets/wolf-app.png'>
+            <img id = 'app' src = 'Assets/wolf-hero.png'>
 
             <div class = 'flagship'>
                 <h1> The Next-Generation Financial Research and Collaboration Platform. </h1>
